# zagreus-identity-provider

./: .dockerignore  .env  Cargo.toml  README.md  docker-compose.yml  hydra.yml
docs/: README.md  create-client.md  project-architecture.md
migrations/: 20210728083854_init.sql  20210728094101_default_resources.sql
zagreus/: Cargo.toml
zagreus-config/: Cargo.toml
zagreus-config/src/: lib.rs
zagreus-domain/: Cargo.toml
zagreus-domain/src/: db.rs
zagreus-domain/src/models/: client.rs  invitation.rs  mod.rs  user.rs
zagreus/src/: hydra_configuration.rs  main.rs  validations.rs
zagreus/src/api/: consent.rs  invitation.rs  login.rs  logout.rs  mod.rs
zagreus/src/api/public/: consent.rs  mod.rs
zagreus/src/commands/: init.rs  mod.rs  run.rs
zagreus/src/views/: home.rs  invitation.rs  invitations.rs  login.rs  mod.rs
