[package]
authors = ["Kévin COMBRIAT <kevin@sc0ville.com>"]
edition = "2018"
name = "zagreus"
version = "0.1.0"

[dependencies]
actix-cors = "0.6.0-beta.2"
actix-files = "0.6.0-beta.6"
actix-web = "4.0.0-beta.8"
anyhow = "1.0.43"
argon2 = "0.2.4"
askama = "0.10.5"
chrono = "0.4.19"
clap = "3.0.0-beta.4"
env_logger = "0.9.0"
lazy_static = "1.4.0"
log = "0.4.14"
oauth2 = {version = "4.1.0", default-features = false}
ory-hydra-client = "1.10.5"
rand = "0.8.4"
rand_core = {version = "0.6.3", features = ["std"]}
serde = "1.0.128"
serde_json = "1.0.66"
tera = "1.12.1"
thiserror = "1.0.26"
tokio = {version = "1.10.0", features = ["macros"]}
url = "2.2.2"
uuid = {version = "0.8.2", features = ["serde", "v4"]}
validator = {version = "0.14.0", features = ["derive"]}
zagreus-config = {path = "../zagreus-config"}
zagreus-domain = {path = "../zagreus-domain"}
